# Calculator

./: CMakeLists.txt  IDEAS.md  README.md
qml/: CodingEditor.qml  DeviceSelector.qml  FieldDelegate.qml  HexInput.qml  Main.qml  Theme.qml
src/: Application.cpp  Application.h  ApplicationConfig.cpp  ApplicationConfig.h  CodingEngine.cpp  CodingEngine.h  CodingTreeModel.cpp  CodingTreeModel.h  DeviceManager.cpp  DeviceManager.h  FileIO.cpp  FileIO.h  main.cpp
